# djangocon2015-views

./: .isort.cfg  Callable_Primer.ipynb  Makefile  README.md  requirements.txt  setup.cfg
src/: manage.py
src/viewsapp/: forms.py  models.py  tests.py  urls.py  views.py
src/viewsapp/migrations/: 0001_initial.py  0002_model_data.py
src/viewsapp/templates/viewsapp/: detail.html  form.html
src/viewsproject/: settings.py  urls.py  wsgi.py
