[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=settings.py,wsgi.py,manage.py
max-complexity = 10
# columns in slideshow
max-line-length = 50
[metadata]
description-file = README.md
[pep8]
# https://pep8.readthedocs.org/en/latest/
# W503 raised if operators are after line break
ignore = W503
